# colorblind

./: CODEOWNERS  README.md  docker-compose.yml
.github/workflows/: dotnet.yml  integration.yml  intergration.yml  node.yml
Colorblind/: .editorconfig  Colorblind.sln  Dockerfile  README.md
Colorblind/Domain/: DependencyInjection.cs  Domain.csproj
Colorblind/Domain/Commands/: RegisterTerminal.cs
Colorblind/Domain/DTOs/: ParcelInTerminalDTO.cs  ParcelToTerminalDTO.cs  ParcelWithEventsDTO.cs  ShippableParcelInTerminal.cs
Colorblind/Domain/Entities/: Admin.cs  Courier.cs  Locker.cs  (+3 more)
Colorblind/Logic/: DependencyInjection.cs  Logic.csproj  ParcelCrud.cs
Colorblind/Logic.Tests/: GetParcelQueryTest.cs  Logic.Tests.csproj  ParcelCrudTest.cs
Colorblind/Persistence/: DependencyInjection.cs  DocumentSessionExtensions.cs  ParcelDao.cs  ParcelRepository.cs  Persistence.csproj  SetupMartenExtensions.cs
Colorblind/WebApp/: ConcurrencyExceptionMiddleware.cs  Dockerfile  DomainErrorMiddleware.cs  InvalidOperationExceptionMiddleware.cs  Program.cs  WebApp.csproj  appsettings.Development.json  appsettings.json
Colorblind/database/: run.bat  run.sh
client/: .env.production  Dockerfile  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
docs/: persona1.tex  persona2.tex  root.tex  user-stories  user-stories.tex  vision.tex
integrationtesting/: .gitignore  pyproject.toml
integrationtesting/src/: config.py  server.py  test_sample.py  test_server.py
integrationtesting/tests/: config.py  test_sample.py  test_server.py
nginx/: nginx.conf
(+204 files in other folders)
